--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,17 +5,55 @@
 	padding: 0;
 }
 
-h1,h2,h3,h4,h5,h6,p,a{
-  font-family: Arial, Helvetica, sans-serif;
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a {
+	font-family: Arial, Helvetica, sans-serif;
 }
 
-a{
-  text-decoration: none;
-  color: inherit;
+a {
+	text-decoration: none;
+	color: inherit;
 }
 
-main{
-  padding: 30px;
-  min-height: 100vh;
+main {
+	padding: 30px;
+	min-height: 100vh;
 }
+
+.darkThemeDarker {
+	background-color: rgb(20, 20, 20);
+	color: white;
+}
+
+.darkThemeNormal {
+  background-color: rgb(30,30,30);
+  color: white;
+}
+
+.darkThemeLighter{
+  background-color: rgb(40,40,40);
+  color: white;
+}
+
+.lightThemeLighter{
+  background-color: rgb(255, 255, 255);
+  color:black
+}
+
+.lightThemeNormal{
+  background-color: rgb(250, 250, 250);
+  color:black
+}
+
+.lightThemeSmoked{
+  background-color: rgb(245, 245, 245);
+  color:black
+}
+
+
