--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,32 +32,107 @@ main {
 }
 
 .darkThemeNormal {
-  background-color: rgb(30,30,30);
-  color: white;
+	background-color: rgb(30, 30, 30);
+	color: white;
 }
 
-.darkThemeLighter{
-  background-color: rgb(40,40,40);
-  color: white;
+.darkThemeLighter {
+	background-color: rgb(40, 40, 40);
+	color: white;
 }
 
-.lightThemeLighter{
-  background-color: rgb(255, 255, 255);
-  color:black
+.lightThemeLighter {
+	background-color: rgb(255, 255, 255);
+	color: black;
 }
 
-.lightThemeNormal{
-  background-color: rgb(250, 250, 250);
-  color:black
+.lightThemeNormal {
+	background-color: rgb(250, 250, 250);
+	color: black;
 }
 
-.lightThemeSmoked{
-  background-color: rgb(245, 245, 245);
-  color:black
+.lightThemeSmoked {
+	background-color: rgb(240, 240, 240);
+	color: black;
 }
 
-.error{
-  color:red;
+.error {
+	color: red;
+	font-size: 14pt;
 }
 
+.form {
+	width: 85%;
+	padding: 20px;
+	font-size: 16pt;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 20px;
+	text-align: center;
+}
 
+.input {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
+}
+
+.input input {
+	width: 100%;
+	height: 35px;
+	border-radius: 7px;
+	padding-left: 10px;
+	font-size: 14pt;
+	font-family: Arial, Helvetica, sans-serif;
+	border: 1px solid grey;
+}
+
+.form button {
+	padding: 10px 30px 10px 30px;
+	border-radius: 20px;
+	cursor: pointer;
+	background-color: rgb(183, 120, 241);
+	color: white;
+	border: none;
+	font-size: 14pt;
+}
+
+.form button:hover {
+	background-color: rgb(146, 62, 224);
+}
+
+@media (max-width: 1000px) {
+	.error {
+		font-size: 12pt;
+	}
+	.form button {
+		padding: 10px 20px 10px 20px;
+	}
+	.form {
+		font-size: 14pt;
+	}
+
+  .form input {
+    font-size: 12pt;
+  }
+}
+
+@media (max-width: 500px) {
+	.error {
+		font-size: 10pt;
+	}
+	.form button {
+		padding: 5px 10px 5px 10px;
+    font-size: 12pt;
+	}
+	.form {
+		font-size: 12pt;
+	}
+
+  .form input {
+    font-size: 10pt;
+  }
+}
