--- a/client/src/index.css
+++ b/client/src/index.css
@@ -73,6 +73,7 @@ main {
 }
 
 .input {
+	position: relative;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
@@ -88,6 +89,14 @@ main {
 	font-size: 14pt;
 	font-family: Arial, Helvetica, sans-serif;
 	border: 1px solid grey;
+}
+
+.input i {
+	position: absolute;
+	font-size: 18pt;
+	cursor: pointer;
+	top: 42px;
+	right: 20px;
 }
 
 .form button {
@@ -114,10 +123,14 @@ main {
 	.form {
 		font-size: 14pt;
 	}
+	.input i {
+		font-size: 16pt;
+		top: 40px;
+	}
 
-  .form input {
-    font-size: 12pt;
-  }
+	.form input {
+		font-size: 12pt;
+	}
 }
 
 @media (max-width: 500px) {
@@ -126,13 +139,17 @@ main {
 	}
 	.form button {
 		padding: 5px 10px 5px 10px;
-    font-size: 12pt;
+		font-size: 12pt;
 	}
 	.form {
 		font-size: 12pt;
 	}
 
-  .form input {
-    font-size: 10pt;
-  }
+	.form input {
+		font-size: 10pt;
+	}
+	.input i {
+		font-size: 14pt;
+		top: 37px;
+	}
 }
