--- a/client/src/index.css
+++ b/client/src/index.css
@@ -88,7 +88,7 @@ main {
 	padding-left: 10px;
 	font-size: 14pt;
 	font-family: Arial, Helvetica, sans-serif;
-	border: 1px solid grey;
+	border: 1px solid rgb(93, 93, 93);
 }
 
 .input i {
