--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,8 @@ h4,
 h5,
 h6,
 p,
-a {
+a,
+label {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -57,6 +58,7 @@ main {
 }
 
 .error {
+	width: 200px;
 	color: red;
 	font-size: 14pt;
 	word-wrap: break-word;
