--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,6 +17,10 @@ label {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+ul{
+	list-style: none;
+}
+
 a {
 	text-decoration: none;
 	color: inherit;
