--- a/client/src/components/header/HeaderStyles.module.css
+++ b/client/src/components/header/HeaderStyles.module.css
@@ -58,6 +58,7 @@
 
 @media(max-width:500px){
     .wrapper {
+		width: auto;
 		gap: 15px;
         flex-direction: column;
         align-items: center;
@@ -66,7 +67,6 @@
         padding: 10px;
 	}
     .wrapper ul {
-        flex-basis: 10%;
 		font-size: 12pt;
 		gap: 10px;
         flex-direction: column;
