--- a/client/src/components/logout/LogoutStyles.module.css
+++ b/client/src/components/logout/LogoutStyles.module.css
@@ -11,6 +11,15 @@
 	font-size: 14pt;
 }
 
+.wrapper a {
+    color:rgb(183, 120, 241);
+    font-weight: bold;
+}
+
+.wrapper a:hover{
+    color:rgb(146, 62, 224);
+}
+
 .buttons {
 	display: flex;
 	gap: 30px;
