--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,7 +17,7 @@ label {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
-ul{
+ul {
 	list-style: none;
 }
 
@@ -26,7 +26,7 @@ a {
 	color: inherit;
 }
 
-body{
+body {
 	padding: 0;
 	margin: 0;
 }
@@ -34,6 +34,7 @@ body{
 main {
 	padding: 30px;
 	min-height: 100vh;
+	position: relative;
 }
 
 .darkThemeDarker {
@@ -125,6 +126,66 @@ main {
 	background-color: rgb(146, 62, 224);
 }
 
+.loader {
+	position: absolute;
+	left: 47.5%;
+	top: 32%;
+	transform: translate(-50%, -50%);
+	width: 70px;
+	height: 70px;
+	border: 5px solid rgb(183, 120, 241);
+	border-radius: 50%;
+	display: inline-block;
+	box-sizing: border-box;
+	animation: pulse 1s linear infinite;
+}
+.loader:after {
+	content: "";
+	position: absolute;
+	width: 70px;
+	height: 70px;
+	border: 5px solid rgb(183, 120, 241);
+	border-radius: 50%;
+	display: inline-block;
+	box-sizing: border-box;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	animation: scaleUp 1s linear infinite;
+}
+
+.errorMessage {
+	margin: 50px auto;
+	width: 450px;
+	text-align: center;
+	padding: 20px;
+	border-radius: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 14pt;
+}
+
+@keyframes scaleUp {
+	0% {
+		transform: translate(-50%, -50%) scale(0);
+	}
+	60%,
+	100% {
+		transform: translate(-50%, -50%) scale(1);
+	}
+}
+@keyframes pulse {
+	0%,
+	60%,
+	100% {
+		transform: scale(1);
+	}
+	80% {
+		transform: scale(1.2);
+	}
+}
+
 @media (max-width: 1000px) {
 	.error {
 		font-size: 12pt;
@@ -142,6 +203,18 @@ main {
 
 	.form input {
 		font-size: 12pt;
+	}
+
+	.errorMessage{
+		font-size: 12pt;
+	}
+	.loader{
+		width: 50px;
+		height: 50px;
+	}
+	.loader:after{
+		width: 50px;
+		height: 50px;
 	}
 }
 
@@ -163,5 +236,18 @@ main {
 	.input i {
 		font-size: 14pt;
 		top: 37px;
+	}
+
+	.errorMessage{
+		width: 90%;
+		font-size: 10pt;
+	}
+	.loader{
+		width: 30px;
+		height: 30px;
+	}
+	.loader:after{
+		width: 30px;
+		height: 30px;
 	}
 }
