--- a/client/src/components/home/HomeStyles.module.css
+++ b/client/src/components/home/HomeStyles.module.css
@@ -34,7 +34,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	gap: 30px;
-	justify-content: space-evenly;
+	justify-content: center;
 }
 
 @media (max-width: 1000px) {
