Implemented styling on task item component

--- a/client/src/components/project_details/ProjectDetailsStyles.module.css
+++ b/client/src/components/project_details/ProjectDetailsStyles.module.css
@@ -83,13 +83,7 @@
 	border: none;
 }
 
-.dashboardBody > article > p {
-	border-bottom: 2px solid grey;
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-
-.dashboardBody > article > p:last-child {
+.dashboardBody > article > article:last-child{
 	border: none;
 }
 
