--- a/client/src/index.css
+++ b/client/src/index.css
@@ -166,6 +166,18 @@ main {
 	font-size: 14pt;
 }
 
+.modal {
+	position: fixed;
+	background-color: rgba(0, 0, 0, 0.7);
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding: 1000px;
+	border-radius: 10px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+	z-index: 1000;
+}
+
 @keyframes scaleUp {
 	0% {
 		transform: translate(-50%, -50%) scale(0);
@@ -205,14 +217,14 @@ main {
 		font-size: 12pt;
 	}
 
-	.errorMessage{
+	.errorMessage {
 		font-size: 12pt;
 	}
-	.loader{
+	.loader {
 		width: 50px;
 		height: 50px;
 	}
-	.loader:after{
+	.loader:after {
 		width: 50px;
 		height: 50px;
 	}
@@ -238,15 +250,15 @@ main {
 		top: 37px;
 	}
 
-	.errorMessage{
+	.errorMessage {
 		width: 90%;
 		font-size: 10pt;
 	}
-	.loader{
+	.loader {
 		width: 30px;
 		height: 30px;
 	}
-	.loader:after{
+	.loader:after {
 		width: 30px;
 		height: 30px;
 	}
