--- a/client/src/commons/member_item/MemberItemStyles.module.css
+++ b/client/src/commons/member_item/MemberItemStyles.module.css
@@ -3,17 +3,34 @@
 	width: 100%;
 	padding-top: 10px;
 	padding-bottom: 10px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    gap:30px;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	gap: 30px;
 }
 
-@media(max-width:400px){
-    .wrapper{
-        flex-direction: column;
-        justify-content: normal;
-        align-items: center;
-        gap:10px;
-    }
+.wrapper img {
+	width: 70px;
+	height: 70px;
+	border-radius: 50%;
+}
+
+@media (max-width: 1000px) {
+	.wrapper img {
+		width: 50px;
+		height: 50px;
+	}
+}
+
+@media (max-width: 400px) {
+	.wrapper {
+		flex-direction: column;
+		justify-content: normal;
+		align-items: center;
+		gap: 10px;
+	}
+	.wrapper img {
+		width: 30px;
+		height: 30px;
+	}
 }
