--- a/client/src/index.css
+++ b/client/src/index.css
@@ -104,6 +104,16 @@ main {
 	border: 1px solid rgb(93, 93, 93);
 }
 
+.input textarea {
+	width: 100%;
+	height: 60px;
+	border-radius: 7px;
+	padding-left: 10px;
+	font-size: 14pt;
+	font-family: Arial, Helvetica, sans-serif;
+	border: 1px solid rgb(93, 93, 93);
+}
+
 .input i {
 	position: absolute;
 	font-size: 18pt;
@@ -217,6 +227,11 @@ main {
 		font-size: 12pt;
 	}
 
+	.input textarea {
+		height: 50px;
+		font-size: 12pt;
+	}
+
 	.errorMessage {
 		font-size: 12pt;
 	}
@@ -243,6 +258,10 @@ main {
 	}
 
 	.form input {
+		font-size: 10pt;
+	}
+	.input textarea {
+		height: 40px;
 		font-size: 10pt;
 	}
 	.input i {
