Implemented add task functionallity

--- a/client/src/components/project_details/add_task/AddTaskStyles.module.css
+++ b/client/src/components/project_details/add_task/AddTaskStyles.module.css
@@ -9,3 +9,15 @@
 	gap: 30px;
 	justify-content: center;
 }
+
+@media (max-width: 1000px) {
+	.wrapper {
+		width: 50vw;
+	}
+}
+
+@media (max-width: 500px) {
+	.wrapper {
+		width: 80vw;
+	}
+}
