--- a/client/src/commons/member_item/MemberItemStyles.module.css
+++ b/client/src/commons/member_item/MemberItemStyles.module.css
@@ -15,10 +15,28 @@
 	border-radius: 50%;
 }
 
+.wrapper button {
+	padding: 10px 30px 10px 30px;
+	border-radius: 20px;
+	cursor: pointer;
+	background-color: rgb(183, 120, 241);
+	color: white;
+	border: none;
+	font-size: 14pt;
+}
+
+.wrapper button:hover {
+	background-color: rgb(146, 62, 224);
+}
+
 @media (max-width: 1000px) {
 	.wrapper img {
 		width: 50px;
 		height: 50px;
+	}
+	.wrapper button {
+		padding: 10px 20px 10px 20px;
+		font-size: 12pt;
 	}
 }
 
@@ -32,5 +50,9 @@
 	.wrapper img {
 		width: 30px;
 		height: 30px;
+	}
+	.wrapper button {
+		padding: 5px 10px 5px 10px;
+		font-size: 10pt;
 	}
 }
