--- a/client/src/components/project_details/add_member/AddMemberStyles.module.css
+++ b/client/src/components/project_details/add_member/AddMemberStyles.module.css
@@ -9,6 +9,7 @@
 	gap: 20px;
 	align-items: center;
 	text-align: center;
+	overflow: auto;
 }
 
 .wrapper > button {
@@ -58,6 +59,14 @@
 	font-size: 14pt;
 }
 
+.memberWrapper {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	justify-content: center;
+}
+
 @media (max-width: 1000px) {
 	.wrapper {
 		width: 70vw;
@@ -67,26 +76,26 @@
 		font-size: 12pt;
 	}
 	.inputWrapper button {
-        top:1px;
+		top: 1px;
 	}
 
-    .wrapper > button {
-        font-size: 18pt;
-    }
+	.wrapper > button {
+		font-size: 18pt;
+	}
 }
 
-@media(max-width:500px){
-    	.wrapper {
+@media (max-width: 500px) {
+	.wrapper {
 		width: 80vw;
 	}
 
 	.inputWrapper button {
 		right: 20px;
-        top:1px;
-         padding: 9px 15px 9px 15px;
+		top: 1px;
+		padding: 9px 15px 9px 15px;
 	}
 
-    .wrapper > button {
-        font-size: 16pt;
-    }
+	.wrapper > button {
+		font-size: 16pt;
+	}
 }
