--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,6 +37,26 @@ main {
 	position: relative;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+    padding: 5px;
+    -webkit-overflow-scrolling: touch; 
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgb(40,40,40);
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: rgb(80,80,80);
+    border-radius: 20px;
+}
+
+::-webkit-scrollbar-button{
+    padding: 10px;
+}
+
 .darkThemeDarker {
 	background-color: rgb(20, 20, 20);
 	color: white;
