--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,21 +40,22 @@ main {
 ::-webkit-scrollbar {
     width: 10px;
     padding: 5px;
-    -webkit-overflow-scrolling: touch; 
+	-webkit-overflow-scrolling: initial;
     scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: rgb(40,40,40);
+    background-color: rgb(80,80,80);
 }
 
 ::-webkit-scrollbar-thumb{
-    background-color: rgb(80,80,80);
+    background-color: grey;
     border-radius: 20px;
+	cursor: pointer;
 }
 
-::-webkit-scrollbar-button{
-    padding: 10px;
+::-webkit-scrollbar-thumb:hover{
+	background-color: darkgrey;
 }
 
 .darkThemeDarker {
