--- a/client/src/components/admin_panel/AdminPanelStyles.module.css
+++ b/client/src/components/admin_panel/AdminPanelStyles.module.css
@@ -55,6 +55,15 @@
 	font-size: 14pt;
 }
 
+.userWrapper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    text-align: center;
+}
+
 @media (max-width: 1000px) {
 	.wrapper {
 		width: 90%;
