--- a/client/src/components/admin_panel/AdminPanelStyles.module.css
+++ b/client/src/components/admin_panel/AdminPanelStyles.module.css
@@ -55,13 +55,40 @@
 	font-size: 14pt;
 }
 
-.userWrapper{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
-    text-align: center;
+.userWrapper {
+    margin-top: 20px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 15px;
+	text-align: center;
+}
+
+.pagination {
+    margin-top: 20px;
+	width: 300px;
+	display: flex;
+	border-radius: 20px;
+	padding: 10px;
+	justify-content: space-evenly;
+	align-items: center;
+	gap: 10px;
+}
+
+.pagination button {
+	background-color: transparent;
+    border:none;
+    cursor: pointer;
+}
+
+.pagination button i:hover {
+    color:rgb(146, 62, 224);
+}
+
+.pagination button i{
+    font-size: 20pt;
+    color: grey
 }
 
 @media (max-width: 1000px) {
