--- a/client/src/components/admin_panel/AdminPanelStyles.module.css
+++ b/client/src/components/admin_panel/AdminPanelStyles.module.css
@@ -56,7 +56,7 @@
 }
 
 .userWrapper {
-    margin-top: 20px;
+	margin-top: 20px;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
@@ -66,7 +66,7 @@
 }
 
 .pagination {
-    margin-top: 20px;
+	margin-top: 20px;
 	width: 300px;
 	display: flex;
 	border-radius: 20px;
@@ -78,17 +78,17 @@
 
 .pagination button {
 	background-color: transparent;
-    border:none;
-    cursor: pointer;
+	border: none;
+	cursor: pointer;
 }
 
 .pagination button i:hover {
-    color:rgb(146, 62, 224);
+	color: rgb(146, 62, 224);
 }
 
-.pagination button i{
-    font-size: 20pt;
-    color: grey
+.pagination button i {
+	font-size: 20pt;
+	color: grey;
 }
 
 @media (max-width: 1000px) {
@@ -109,9 +109,16 @@
 	.wrapper > button {
 		font-size: 18pt;
 	}
+
+	.pagination button i {
+		font-size: 18pt;
+	}
 }
 
 @media (max-width: 500px) {
+	.pagination {
+		width: 200px;
+	}
 	.wrapper {
 		width: 95%;
 	}
@@ -122,6 +129,10 @@
 	}
 
 	.wrapper > button {
+		font-size: 16pt;
+	}
+
+	.pagination button i {
 		font-size: 16pt;
 	}
 }
