--- a/client/src/commons/member_item/MemberItemStyles.module.css
+++ b/client/src/commons/member_item/MemberItemStyles.module.css
@@ -4,18 +4,19 @@
 	padding-top: 10px;
 	padding-bottom: 10px;
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-between;
 	align-items: center;
-	gap: 30px;
 }
 
 .wrapper img {
+	margin-left: 100px;
 	width: 70px;
 	height: 70px;
 	border-radius: 50%;
 }
 
 .wrapper button {
+	margin-right: 100px;
 	padding: 10px 30px 10px 30px;
 	border-radius: 20px;
 	cursor: pointer;
@@ -31,10 +32,12 @@
 
 @media (max-width: 1000px) {
 	.wrapper img {
+		margin-left: 30px;
 		width: 50px;
 		height: 50px;
 	}
 	.wrapper button {
+		margin-right: 30px;
 		padding: 10px 20px 10px 20px;
 		font-size: 12pt;
 	}
@@ -48,10 +51,12 @@
 		gap: 10px;
 	}
 	.wrapper img {
+		margin-left: 0;
 		width: 30px;
 		height: 30px;
 	}
 	.wrapper button {
+		margin-right: 0;
 		padding: 5px 10px 5px 10px;
 		font-size: 10pt;
 	}
