Project dashboard styling updated

--- a/client/src/components/project_details/ProjectDetailsStyles.module.css
+++ b/client/src/components/project_details/ProjectDetailsStyles.module.css
@@ -89,6 +89,10 @@
 	border: none;
 }
 
+.borderNone {
+	border: none !important;
+}
+
 @media (max-width: 1000px) {
 	.buttonWrapper button {
 		padding: 10px 20px 10px 20px;
