--- a/client/src/commons/task_item/TaskItemStyles.module.css
+++ b/client/src/commons/task_item/TaskItemStyles.module.css
@@ -6,6 +6,7 @@
 	padding-bottom: 10px;
 	border-bottom: 2px solid grey;
 	font-size: 14pt;
+	height: 140px;
 }
 
 .buttonWrapper {
@@ -65,6 +66,7 @@
 @media (max-width: 500px) {
 	.wrapper {
 		font-size: 10pt;
+		height: 175px;
 	}
 
 	.buttonWrapper button {
@@ -74,5 +76,11 @@
 
 	.buttonWrapper i {
 		font-size: 12pt;
+	}
+	.buttonWrapper {
+		flex-direction: column;
+		gap: 10px;
+		justify-content: center;
+		align-items: center;
 	}
 }
