--- a/client/src/components/profile/ProfileStyles.module.css
+++ b/client/src/components/profile/ProfileStyles.module.css
@@ -12,10 +12,25 @@
 }
 
 .wrapper img {
-	width: 100px;
-	height: 100px;
+	width: 300px;
+	height: 300px;
 	border-radius: 50%;
 	object-fit: cover;
+}
+
+.headerWrapper{
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap:100px;
+}
+
+.headerInfo{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
 }
 
 .buttonWrapper {
@@ -49,13 +64,17 @@
 	}
 
 	.wrapper img {
-		width: 70px;
-		height: 70px;
+		width: 200px;
+		height: 200px;
 	}
 
 	.buttonWrapper button {
 		padding: 10px 20px 10px 20px;
 		font-size: 12pt;
+	}
+
+	.headerWrapper{
+		gap:50px;
 	}
 }
 
@@ -65,12 +84,16 @@
 	}
 
 	.wrapper img {
-		width: 50px;
-		height: 50px;
+		width: 100px;
+		height: 100px;
 	}
 
 	.buttonWrapper button {
 		padding: 5px 10px 5px 10px;
 		font-size: 10pt;
+	}
+
+	.headerWrapper{
+		gap:30px;
 	}
 }
