--- a/client/src/components/home/HomeStyles.module.css
+++ b/client/src/components/home/HomeStyles.module.css
@@ -18,6 +18,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	transition: all 0.3s ease-in-out;
 }
 
 .plusContainer:hover {
