--- a/client/src/components/profile/ProfileStyles.module.css
+++ b/client/src/components/profile/ProfileStyles.module.css
@@ -9,6 +9,7 @@
 	align-items: center;
 	text-align: center;
 	font-size: 16pt;
+	transition: all 0.3s ease-in-out;
 }
 
 .wrapper img {
@@ -51,6 +52,7 @@
 	color: white;
 	border: none;
 	font-size: 14pt;
+	transition: all 0.3s ease-in-out;
 }
 
 .buttonWrapper button:hover {
