--- a/client/src/components/project_details/add_member/AddMemberStyles.module.css
+++ b/client/src/components/project_details/add_member/AddMemberStyles.module.css
@@ -10,6 +10,7 @@
 	align-items: center;
 	text-align: center;
 	overflow: auto;
+	transition: all 0.3s ease-in-out;
 }
 
 .wrapper > button {
@@ -21,6 +22,7 @@
 	background-color: transparent;
 	border: none;
 	cursor: pointer;
+	transition: all 0.3s ease-in-out;
 }
 
 .wrapper > button:hover {
@@ -47,6 +49,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	transition: all 0.3s ease-in-out;
 }
 
 .inputWrapper button:hover {
