--- a/client/src/components/project_details/members/MembersStyles.module.css
+++ b/client/src/components/project_details/members/MembersStyles.module.css
@@ -11,6 +11,7 @@
 	border-radius: 10px;
 	overflow: auto;
 	font-size: 16pt;
+	transition: all 0.3s ease-in-out;
 }
 
 .wrapper > button {
@@ -22,6 +23,7 @@
 	background-color: transparent;
 	border: none;
 	cursor: pointer;
+	transition: all 0.3s ease-in-out;
 }
 
 .wrapper > button:hover {
