--- a/client/src/components/registrarion_wrapper/registrationWrapperStyles.module.css
+++ b/client/src/components/registrarion_wrapper/registrationWrapperStyles.module.css
@@ -21,6 +21,7 @@
 	padding: 20px;
 	cursor: pointer;
 	font-size: 16pt;
+	transition: all 0.5s ease-in-out;
 }
 
 .buttonSection button:nth-child(1) {
