--- a/client/src/index.css
+++ b/client/src/index.css
@@ -123,6 +123,7 @@ main {
 	font-size: 14pt;
 	font-family: Arial, Helvetica, sans-serif;
 	border: 1px solid rgb(93, 93, 93);
+	transition: all 0.3s ease-in-out;
 }
 
 .input textarea {
@@ -134,6 +135,7 @@ main {
 	font-family: Arial, Helvetica, sans-serif;
 	border: 1px solid rgb(93, 93, 93);
 	resize: none;
+	transition: all 0.3s ease-in-out;
 }
 
 .input i {
@@ -152,6 +154,7 @@ main {
 	color: white;
 	border: none;
 	font-size: 14pt;
+	transition: all 0.3s ease-in-out;
 }
 
 .form button:hover {
