Implemented content visabillity auto

--- a/client/src/commons/member_item/MemberItemStyles.module.css
+++ b/client/src/commons/member_item/MemberItemStyles.module.css
@@ -6,6 +6,8 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	content-visibility: auto;
+	contain-intrinsic-size: 200px;
 }
 
 .wrapper img {
