--- a/client/src/commons/project_item/ProjectItemStyles.module.css
+++ b/client/src/commons/project_item/ProjectItemStyles.module.css
@@ -7,6 +7,8 @@
 	align-items: center;
 	gap: 20px;
 	transition: all 0.3s ease-in-out;
+	content-visibility: auto;
+	contain-intrinsic-size: 300px;
 }
 
 .wrapper h2{
