--- a/client/src/commons/user_item/UserItemStyles.module.css
+++ b/client/src/commons/user_item/UserItemStyles.module.css
@@ -7,6 +7,8 @@
     align-items: center;
     gap:10px;
     font-size: 14pt;
+    content-visibility: auto;
+	contain-intrinsic-size: 200px;
 }
 
 .wrapper img{
