--- a/client/src/components/profile/ProfileStyles.module.css
+++ b/client/src/components/profile/ProfileStyles.module.css
@@ -1,7 +1,7 @@
-.wrapper{
+.wrapper {
 	display: flex;
 	flex-direction: column;
-	gap:20px;
+	gap: 20px;
 	align-items: center;
 	justify-content: center;
 	text-align: center;
@@ -20,22 +20,22 @@
 	transition: all 0.3s ease-in-out;
 }
 
-.wrapper img {
+.profileWrapper img {
 	width: 300px;
 	height: 300px;
 	border-radius: 50%;
 	object-fit: cover;
 }
 
-.headerWrapper{
+.headerWrapper {
 	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap:100px;
+	gap: 100px;
 }
 
-.headerInfo{
+.headerInfo {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -67,13 +67,21 @@
 	background-color: rgb(146, 62, 224);
 }
 
+.taskWrapper {
+	width: 90%;
+	display: flex;
+	gap: 30px;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
 @media (max-width: 1000px) {
-	.wrapper {
+	.profileWrapper {
 		width: 80vw;
 		font-size: 14pt;
 	}
 
-	.wrapper img {
+	.profileWrapper img {
 		width: 200px;
 		height: 200px;
 	}
@@ -83,18 +91,18 @@
 		font-size: 12pt;
 	}
 
-	.headerWrapper{
-		gap:50px;
+	.headerWrapper {
+		gap: 50px;
 	}
 }
 
 @media (max-width: 500px) {
-	.wrapper {
+	.profileWrapper {
 		width: 90%;
 		font-size: 12pt;
 	}
 
-	.wrapper img {
+	.profileWrapper img {
 		width: 100px;
 		height: 100px;
 	}
@@ -104,7 +112,7 @@
 		font-size: 10pt;
 	}
 
-	.headerWrapper{
-		gap:30px;
+	.headerWrapper {
+		gap: 30px;
 	}
 }
